--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <link href="./assets/vendor/aos/aos.css" rel="stylesheet">
    
     <!-- Template Main CSS File -->
-    <link href="./assets/css/style.css" rel="stylesheet">
+    <!-- <link href="./assets/css/style.css" rel="stylesheet"> -->
    
    </script>
     <!-- Vendor JS Files -->
